--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                          <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Archives" asp-action="Index">Archives</a>
                          </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ProfileEntities" asp-action="Index">My Profile</a>
+                            </li>
                          <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
                         </li>
