Now Form to create new profile save that profile in database

--- a/Views/ProfileEntities/Edit.cshtml
+++ b/Views/ProfileEntities/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model WebApplication3.Data.Entities.ProfileEntity
+﻿@using System.ComponentModel.DataAnnotations
+@model WebApplication3.Data.Entities.ProfileEntity
 
 @{
     ViewData["Title"] = "Edit";
@@ -30,14 +31,24 @@
             </div>
             <div class="form-group">
                 <label asp-for="Blood" class="control-label"></label>
-                <select asp-for="Blood" class="form-control"></select>
+                <select asp-for="Blood" class="form-control">
+                    @foreach (var bloodType in Enum.GetValues(typeof(WebApplication3.Data.Entities.BloodType)))
+                    {
+                        var displayAttribute = typeof(WebApplication3.Data.Entities.BloodType)
+                        .GetMember(bloodType.ToString())[0]
+                        .GetCustomAttributes(typeof(DisplayAttribute), false)
+                        .FirstOrDefault() as DisplayAttribute;
+
+                        <option value="@bloodType">@displayAttribute?.GetName()</option>
+                    }
+                </select>
                 <span asp-validation-for="Blood" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
+              <div class="form-group" >
+                  <label asp-for="UserId" class="control-label"></label>
+                  <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
+                  <span asp-validation-for="UserId" class="text-danger"></span>
+              </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
