--- a/Views/ProfileEntities/Create.cshtml
+++ b/Views/ProfileEntities/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -42,6 +42,17 @@
                     }
                 </select>
                 <span asp-validation-for="Blood" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="UserId" class="control-label"></label>
+                <select asp-for="UserId" class="form-control">
+                    @foreach (var userid in (SelectList)ViewData["UserId"])
+                    {
+
+                        <option value="@userid.Value">@userid.Text</option>
+                    }
+                </select>
+                <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <br>
             <div class="form-group">
