--- a/Views/ProfileEntities/Create.cshtml
+++ b/Views/ProfileEntities/Create.cshtml
@@ -43,17 +43,7 @@
                 </select>
                 <span asp-validation-for="Blood" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control">
-                    @foreach (var userid in (SelectList)ViewData["UserId"])
-                    {
-
-                        <option value="@userid.Value">@userid.Text</option>
-                    }
-                </select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
+                    <input type="hidden" asp-for="UserId" value="@ViewData["UserId"]">
             <br>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
