--- a/Views/ProfileEntities/Edit.cshtml
+++ b/Views/ProfileEntities/Edit.cshtml
@@ -44,11 +44,7 @@
                 </select>
                 <span asp-validation-for="Blood" class="text-danger"></span>
             </div>
-              <div class="form-group" >
-                  <label asp-for="UserId" class="control-label"></label>
-                  <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                  <span asp-validation-for="UserId" class="text-danger"></span>
-              </div>
+            <input type="hidden" asp-for="UserId" value="@ViewData["UserId"]">
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
