creating forms, displaying data and editing for a Profile is no longer done using the entity, but by the view, the problem with displaying all profiles, not only the user has been solved

--- a/Views/ProfileEntities/Create.cshtml
+++ b/Views/ProfileEntities/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.ComponentModel.DataAnnotations
-@model WebApplication3.Data.Entities.ProfileEntity
+@model WebApplication3.Models.ViewModel.ProfileVm
 
 @{
     ViewData["Title"] = "Create";
