--- a/Views/ProfileEntities/Delete.cshtml
+++ b/Views/ProfileEntities/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication3.Data.Entities.ProfileEntity
+﻿@model WebApplication3.Models.ViewModel.ProfileVm
 
 @{
     ViewData["Title"] = "Delete";
@@ -34,12 +34,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Blood)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
         </dd>
     </dl>
     
