--- a/Views/ProfileEntities/Details.cshtml
+++ b/Views/ProfileEntities/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication3.Data.Entities.ProfileEntity
+﻿@model WebApplication3.Models.ViewModel.ProfileVm
 
 @{
     ViewData["Title"] = "Details";
@@ -14,32 +14,27 @@
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Model.Name
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Surname)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Surname)
+            @Model.Surname
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateOfBirth)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateOfBirth)
+            @Model.DateOfBirth
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Blood)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Blood)
+            @Model.Blood
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
-        </dd>
+
     </dl>
 </div>
 <div>
