--- a/Views/ProfileEntities/Edit.cshtml
+++ b/Views/ProfileEntities/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.ComponentModel.DataAnnotations
-@model WebApplication3.Data.Entities.ProfileEntity
+@model WebApplication3.Models.ViewModel.ProfileVm
 
 @{
     ViewData["Title"] = "Edit";
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -45,6 +45,7 @@
                 <span asp-validation-for="Blood" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="UserId" value="@ViewData["UserId"]">
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
