--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Tests" asp-action="Index">Tests</a>
                          </li>
                          <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="NewTest" asp-action="Index">New Test</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="TestTypeEntity" asp-action="Index">New Test</a>
                          </li>
                          <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Archives" asp-action="Index">Archives</a>
