The Extensions folder has been added and now has an extension for displaying the names of the enum used in the Profile Index

--- a/Views/ProfileEntities/Index.cshtml
+++ b/Views/ProfileEntities/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model WebApplication3.Models.ViewModel.ProfileVm
-
+@using WebApplication3.Helpers
 @{
     ViewData["Title"] = "Index";
 }
@@ -38,10 +38,10 @@
                 @Model.Surname
             </td>
             <td>
-                @Model.DateOfBirth
+                @Model.DateOfBirth.ToShortDateString()
             </td>
             <td>
-                @Model.Blood
+                @(Model.Blood.GetDisplayName())
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
