--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,10 +28,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="Index">Data</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Tests" asp-action="Index">Tests</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MeasurmentEntities" asp-action="Index">Tests</a>
                          </li>
                          <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="TestTypeEntity" asp-action="Index">New Test</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MeasurmentEntities" asp-action="Create">New Test</a>
                          </li>
                          <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Archives" asp-action="Index">Archives</a>
