profile index was removed and its tasks were taken over by details, a controller and devices display were added

--- a/Views/DeviceEntities/Create.cshtml
+++ b/Views/DeviceEntities/Create.cshtml
@@ -1,17 +1,41 @@
-﻿@model WebApplication3.Data.Entities.DeviceEntity
+﻿@model WebApplication3.Models.ViewModel.DeviceVm
 
 @{
     ViewData["Title"] = "Create";
 }
-
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="alert alert-danger">
+        <ul>
+            @foreach (var modelStateEntry in ViewData.ModelState.Values)
+            {
+                foreach (var error in modelStateEntry.Errors)
+                {
+                    <li>@error.ErrorMessage</li>
+                }
+            }
+        </ul>
+    </div>
+}
 <h1>Create</h1>
 
 <h4>DeviceEntity</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="DeviceName" class="control-label"></label>
+                <select asp-for="DeviceName" class="form-control">
+                    @foreach (var value in Enum.GetValues(typeof(WebApplication3.Data.Entities.DeviceType)))
+                    {
+                        <option value="@value.ToString()">@Enum.GetName(typeof(WebApplication3.Data.Entities.DeviceType), value)</option>
+                    }
+                </select>
+
+                <span asp-validation-for="DeviceName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -21,12 +45,9 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Time" class="control-label"></label>
-                <input asp-for="Time" class="form-control" />
-                <span asp-validation-for="Time" class="text-danger"></span>
-            </div>
+            </div>     
+            <input type="hidden" asp-for="UserId" value="@ViewData["UserId"]">
+            <br>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -39,5 +60,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
