--- a/Views/DeviceEntities/Edit.cshtml
+++ b/Views/DeviceEntities/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication3.Data.Entities.DeviceEntity
+﻿@model WebApplication3.Models.ViewModel.DeviceVm
 
 @{
     ViewData["Title"] = "Edit";
@@ -14,6 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="DeviceName" class="control-label"></label>
+                <input asp-for="DeviceName" class="form-control" />
+                <span asp-validation-for="DeviceName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
@@ -23,11 +28,8 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Time" class="control-label"></label>
-                <input asp-for="Time" class="form-control" />
-                <span asp-validation-for="Time" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="UserId" value="@ViewData["UserId"]">
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
