--- a/Views/DeviceEntities/Index.cshtml
+++ b/Views/DeviceEntities/Index.cshtml
@@ -1,47 +1,62 @@
-﻿@model IEnumerable<WebApplication3.Data.Entities.DeviceEntity>
+﻿@model List<WebApplication3.Models.ViewModel.DeviceVm>
 
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>Index</h1>
+@{
+    var i = 0;
+    
+        var devicesCount = Model?.Count ?? 0; 
+    }
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+    @if (devicesCount < 5)
+    {
+        <p>
+            <a asp-action="Create">Create New</a>
+        </p>
+    }
+    else
+    {
+        <p><b>Limit of 5 devices has been reached</b></p>
+    }
+
+
+
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().DeviceName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Time)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().Name)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Time)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+        @if (Model != null)
+        {
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DeviceName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+
+        }
 }
     </tbody>
 </table>
