--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,10 +37,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Archives" asp-action="Index">Archives</a>
                          </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="ProfileEntities" asp-action="Index">My Profile</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ProfileEntities" asp-action="Details">My Profile</a>
                             </li>
                          <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="DeviceEntities" asp-action="Index">Devices</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
