--- a/Views/DeviceEntities/Details.cshtml
+++ b/Views/DeviceEntities/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication3.Data.Entities.DeviceEntity
+﻿@model WebApplication3.Models.ViewModel.DeviceVm
 
 @{
     ViewData["Title"] = "Details";
@@ -7,30 +7,38 @@
 <h1>Details</h1>
 
 <div>
-    <h4>DeviceEntity</h4>
+    <h4>ProfileEntity</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.DeviceName)
+        </dt>
+        <dd class="col-sm-10">
+            @Model.DeviceName
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+        <dd class="col-sm-10">
+            @Model.Name
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+        <dd class="col-sm-10">
+            @Model.Description
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Time)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Time)
+        <dd class="col-sm-10">
+            @Model.Time
         </dd>
+
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
