--- a/Views/MeasurmentEntities/Index.cshtml
+++ b/Views/MeasurmentEntities/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication3.Data.Entities.MeasurementEntity>
+﻿@model List<WebApplication3.ViewModels.MeasurementVm>
 
 @{
     ViewData["Title"] = "Index";
@@ -11,49 +11,17 @@
 </p>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.comment)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TreatmentTime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InsertionTime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Value)
-            </th>
-            <th></th>
-        </tr>
+
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.comment)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TreatmentTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.InsertionTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Value)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var measurement in Model)
+        {
+            <tr>
+                <td>@measurement.MeasurementId</td>
+                <td>@measurement.MeasurementName</td>
+                <td>@measurement.MeasurementComment</td>
+                <!-- ... Dodaj kolejne komórki z danymi w zależności od potrzeb -->
+            </tr>
+        }
     </tbody>
 </table>
