--- a/Views/ProfileEntities/Details.cshtml
+++ b/Views/ProfileEntities/Details.cshtml
@@ -1,43 +1,86 @@
 ﻿@model WebApplication3.Models.ViewModel.ProfileVm
-
+@using WebApplication3.Helpers
 @{
     ViewData["Title"] = "Details";
 }
-
-<h1>Details</h1>
+@if (Model == null)
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
+<h1>My profile</h1>
 
 <div>
-    <h4>ProfileEntity</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
+         @if (Model != null)
+        {
         <dd class = "col-sm-10">
             @Model.Name
-        </dd>
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10">
+               
+            </dd>
+        }
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Surname)
         </dt>
+         @if (Model != null)
+        {
         <dd class = "col-sm-10">
             @Model.Surname
         </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10">
+
+            </dd>
+        }
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateOfBirth)
         </dt>
+        @if (Model != null)
+        {
         <dd class = "col-sm-10">
-            @Model.DateOfBirth
+                @Model.DateOfBirth.ToShortDateString()
         </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10">
+
+            </dd>
+        }
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Blood)
         </dt>
-        <dd class = "col-sm-10">
-            @Model.Blood
-        </dd>
+        @if (Model != null)
+        {
+            <dd class = "col-sm-10">
+                @(Model.Blood.GetDisplayName())
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10">
 
+            </dd>
+        }
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+@if (Model != null)
+{
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+        <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
+    </div>
+
+}
