I got rid of TypeTest and added the necessary elements it had to Measurement, I also made controllers for Measurement

--- a/Views/MeasurmentEntities/Delete.cshtml
+++ b/Views/MeasurmentEntities/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.comment)
+            @Html.DisplayNameFor(model => model.Comment)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.comment)
+            @Html.DisplayFor(model => model.Comment)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TreatmentTime)
