--- a/Views/MeasurmentEntities/Create.cshtml
+++ b/Views/MeasurmentEntities/Create.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="comment" class="control-label"></label>
-                <input asp-for="comment" class="form-control" />
-                <span asp-validation-for="comment" class="text-danger"></span>
+                <label asp-for="Comment" class="control-label"></label>
+                <input asp-for="Comment" class="form-control" />
+                <span asp-validation-for="Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TreatmentTime" class="control-label"></label>
