--- a/Views/MeasurmentEntities/Delete.cshtml
+++ b/Views/MeasurmentEntities/Delete.cshtml
@@ -1,5 +1,4 @@
-﻿@model WebApplication3.Data.Entities.MeasurementEntity
-
+﻿@model WebApplication3.Models.ViewModel.MeasurementVm
 @{
     ViewData["Title"] = "Delete";
 }
@@ -11,12 +10,6 @@
     <h4>MeasurmentEntity</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Comment)
         </dt>
