--- a/Views/MeasurmentEntities/Details.cshtml
+++ b/Views/MeasurmentEntities/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication3.Data.Entities.MeasurementEntity
+﻿@model WebApplication3.Models.ViewModel.MeasurementVm
 
 @{
     ViewData["Title"] = "Details";
@@ -10,12 +10,7 @@
     <h4>MeasurmentEntity</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Comment)
         </dt>
