--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="MeasurmentEntities" asp-action="Index">Tests</a>
                          </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MeasurmentEntities" asp-action="Index">Measuremnts</a>
+                            </li>
                          <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="MeasurmentEntities" asp-action="Create">New Test</a>
                          </li>
